3822B1FI1/9_gelu_ocl/kabalova_valeria/log.txt
In file included from /usr/local/cuda/include/CL/cl.h:20,
                 from /home/crazyproger/sandbox/cuda-2025/3822B1FI1/9_gelu_ocl/kabalova_valeria/gelu_ocl.cpp:2:
/usr/local/cuda/include/CL/cl_version.h:22:104: note: ‘#pragma message: cl_version.h: CL_TARGET_OPENCL_VERSION is not defined. Defaulting to 300 (OpenCL 3.0)’
   22 | #pragma message("cl_version.h: CL_TARGET_OPENCL_VERSION is not defined. Defaulting to 300 (OpenCL 3.0)")
      |                                                                                                        ^
/home/crazyproger/sandbox/cuda-2025/3822B1FI1/9_gelu_ocl/kabalova_valeria/gelu_ocl.cpp: In function ‘std::vector<float> GeluOCL(const std::vector<float>&)’:
/home/crazyproger/sandbox/cuda-2025/3822B1FI1/9_gelu_ocl/kabalova_valeria/gelu_ocl.cpp:29:3: error: ‘clGetPlatformsIDs’ was not declared in this scope; did you mean ‘clGetPlatformIDs’?
   29 |   clGetPlatformsIDs(1, &platform, nullptr);
      |   ^~~~~~~~~~~~~~~~~
      |   clGetPlatformIDs
/home/crazyproger/sandbox/cuda-2025/3822B1FI1/9_gelu_ocl/kabalova_valeria/gelu_ocl.cpp:38:31: warning: ‘_cl_command_queue* clCreateCommandQueue(cl_context, cl_device_id, cl_command_queue_properties, cl_int*)’ is deprecated [-Wdeprecated-declarations]
   38 |   queue = clCreateCommandQueue(context, device, nullptr, nullptr);
      |           ~~~~~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
In file included from /home/crazyproger/sandbox/cuda-2025/3822B1FI1/9_gelu_ocl/kabalova_valeria/gelu_ocl.cpp:2:
/usr/local/cuda/include/CL/cl.h:1914:1: note: declared here
 1914 | clCreateCommandQueue(cl_context                     context,
      | ^~~~~~~~~~~~~~~~~~~~
/home/crazyproger/sandbox/cuda-2025/3822B1FI1/9_gelu_ocl/kabalova_valeria/gelu_ocl.cpp:38:31: warning: ‘_cl_command_queue* clCreateCommandQueue(cl_context, cl_device_id, cl_command_queue_properties, cl_int*)’ is deprecated [-Wdeprecated-declarations]
   38 |   queue = clCreateCommandQueue(context, device, nullptr, nullptr);
      |           ~~~~~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
In file included from /home/crazyproger/sandbox/cuda-2025/3822B1FI1/9_gelu_ocl/kabalova_valeria/gelu_ocl.cpp:2:
/usr/local/cuda/include/CL/cl.h:1914:1: note: declared here
 1914 | clCreateCommandQueue(cl_context                     context,
      | ^~~~~~~~~~~~~~~~~~~~
/home/crazyproger/sandbox/cuda-2025/3822B1FI1/9_gelu_ocl/kabalova_valeria/gelu_ocl.cpp:38:49: error: cannot convert ‘std::nullptr_t’ to ‘cl_command_queue_properties’ {aka ‘long unsigned int’}
   38 |   queue = clCreateCommandQueue(context, device, nullptr, nullptr);
      |                                                 ^~~~~~~
      |                                                 |
      |                                                 std::nullptr_t
In file included from /home/crazyproger/sandbox/cuda-2025/3822B1FI1/9_gelu_ocl/kabalova_valeria/gelu_ocl.cpp:2:
/usr/local/cuda/include/CL/cl.h:1916:53: note:   initializing argument 3 of ‘_cl_command_queue* clCreateCommandQueue(cl_context, cl_device_id, cl_command_queue_properties, cl_int*)’
 1916 |                      cl_command_queue_properties    properties,
      |                      ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~~~~~~~
/home/crazyproger/sandbox/cuda-2025/3822B1FI1/9_gelu_ocl/kabalova_valeria/gelu_ocl.cpp:46:23: error: ‘strlen’ was not declared in this scope
   46 |   size_t srclen[] = { strlen(source) };
      |                       ^~~~~~
/home/crazyproger/sandbox/cuda-2025/3822B1FI1/9_gelu_ocl/kabalova_valeria/gelu_ocl.cpp:3:1: note: ‘strlen’ is defined in header ‘<cstring>’; did you forget to ‘#include <cstring>’?
    2 | #include <CL/cl.h>
  +++ |+#include <cstring>
    3 | 
/home/crazyproger/sandbox/cuda-2025/3822B1FI1/9_gelu_ocl/kabalova_valeria/gelu_ocl.cpp:59:53: error: cannot convert ‘const int*’ to ‘const size_t*’ {aka ‘const long unsigned int*’}
   59 |   clEnqueueNDRangeKernel(queue, kernel, 1, nullptr, &size, &group, 0, nullptr, nullptr);
      |                                                     ^~~~~
      |                                                     |
      |                                                     const int*
In file included from /home/crazyproger/sandbox/cuda-2025/3822B1FI1/9_gelu_ocl/kabalova_valeria/gelu_ocl.cpp:2:
/usr/local/cuda/include/CL/cl.h:1736:41: note:   initializing argument 5 of ‘cl_int clEnqueueNDRangeKernel(cl_command_queue, cl_kernel, cl_uint, const size_t*, const size_t*, const size_t*, cl_uint, _cl_event* const*, _cl_event**)’
 1736 |                        const size_t *   global_work_size,
      |                        ~~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~~~
